[gd_scene load_steps=3 format=3 uid="uid://dck8xg0ihkr0d"]

[ext_resource type="Script" path="res://Scenes/gui/Settings.gd" id="1"]
[ext_resource type="FontFile" path="res://Fonts/headings.tres" id="2"]

[node name="settings_sub" type="Container"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="center" type="CenterContainer" parent="."]
layout_mode = 2
mouse_filter = 0
use_top_left = true

[node name="vbox" type="VBoxContainer" parent="center"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="settings" type="Label" parent="center/vbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="container" type="GridContainer" parent="center/vbox"]
layout_mode = 2
mouse_filter = 0
columns = 2

[node name="music_vol" type="Label" parent="center/vbox/container"]
layout_mode = 2
text = "Music"

[node name="music_slider" type="HSlider" parent="center/vbox/container"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="sfx_vol" type="Label" parent="center/vbox/container"]
layout_mode = 2
text = "Sfx"

[node name="sfx_slider" type="HSlider" parent="center/vbox/container"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="back_button" type="Button" parent="center/vbox"]
layout_mode = 2
text = "Ok"

[connection signal="value_changed" from="center/vbox/container/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="center/vbox/container/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="center/vbox/back_button" to="." method="_on_back_button_pressed"]
